# Emoji-Log-Data-Sci

./: .gitignore  README.md  pyproject.toml
Research/: git.ipynb  sample_commits.pkl
emoji_log_ds/: __about__.py  emojiLog.py
tests/: __init__.py
